src/app/components/classement-infos/classement-infos.component.scss
/* info block */

:host {
    display: grid;
    grid-template: 'infos image' 'content content'/ 1fr auto;
    gap: 15px;
    box-sizing: content-box;
    margin: 15px 0;
    border: 1px solid var(--menu-separator);
    padding: 15px;
}

.banner {
    grid-area: image;
    height: fit-content;
    max-height: 250px;
}
.infos {
    grid-area: infos;
}
.content {
    grid-area: content;
}

.groups {
    display: flex;
    justify-content: flex-start;
    gap: 20px;
    padding-top: 3px;
    white-space: nowrap;
}

.mode {
    border: 1px solid;
    border-radius: 10px;
    padding: 0 5px;
    font-size: 80%;
}

.name {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 0;

    .history {
        text-align: right;
    }
}

.dates {
    margin-top: 10px;
}

.date {
    font-size: 80%;
}

.category,
.username {
    font-weight: 700;
}
.username a {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-top: 10px;
}

.avatar {
    border-radius: 50%;
    height: 40px;
}

.note {
    width: 100%;
    font-size: 80%;
    text-align: center;
}

.buttons {
    margin-top: 15px;
}

.tags {
    padding: 10px 0 10px;
    font-size: 80%;
}

.votes {
    text-align: center;

    .selected {
        background-color: var(--primary300);
    }

    .readonly {
        opacity: 1;
        background-color: var(--neutral050);
    }
}

@media screen and (width < 768px) {
    :host {
        display: flex;
        flex-direction: column;
    }

    .banner {
        display: block;
        margin: auto;
    }
}

